remove accoutn password

--- a/config.ini
+++ b/config.ini
@@ -1,6 +1,6 @@
 [DATABASE]
-USERNAME: mongo_root
-PASSWORD: Password777!Here
-HOST: 114.32.122.25
-PORT: 27017
+USERNAME: 
+PASSWORD: 
+HOST: 
+PORT:
 DB: test
