--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "C:\\Users\\A00879\\Anaconda3\\envs\\ENV\\python.exe"
+    "python.pythonPath": "C:\\Users\\user\\Anaconda3\\envs\\evn\\python.exe"
 }
