--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "C:\\Users\\user\\Anaconda3\\envs\\evn\\python.exe"
+    "python.pythonPath": "C:\\Users\\A00888\\Anaconda3\\envs\\env\\python.exe"
 }
